--- a/views/index.haml
+++ b/views/index.haml
@@ -22,10 +22,14 @@
       %a{href: '/simple/https/www.pocasi.cz'} Počasí.cz
     %li
       %a{href: '/simple/https/onemocneni-aktualne.mzcr.cz/covid-19'} COVID-19
-      
+
 %form{action: '/', method: 'post'}
   %input{name: 'url', placeholder: 'vlastní URL...'}
   %button{type: 'submit', name: 'level', value: 'simple'}
     Rozesrat Simple(TM)
   %button{type: 'submit', name: 'level', value: 'advanced'}
     Rozesrat Advanced(TM)
+
+%p.copyright
+  %a{href: 'https://github.com/mig1984/srackomat'} zdrojový kód aplikace
+
