--- a/views/index.haml
+++ b/views/index.haml
@@ -13,6 +13,8 @@
     %li
       %a{href: '/advanced/https/www.irozhlas.cz'} iRozhlas.cz
     %li
+      %a{href: '/advanced/https/www.aktualne.cz'} Aktuálně.cz
+    %li
       %a{href: '/advanced/https/www.denik.cz'} denik.cz
     %li
       %a{href: '/advanced/https/www.parlamentnilisty.cz'} Parlamentní Listy
