--- a/views/index.haml
+++ b/views/index.haml
@@ -21,14 +21,14 @@
     %li
       %a{href: '/advanced/https/www.sport.cz'} Sport.cz
     %li
-      %a{href: '/simple/https/www.pocasi.cz'} Počasí.cz
+      %a{href: '/lite/https/www.pocasi.cz'} Počasí.cz
     %li
-      %a{href: '/simple/https/onemocneni-aktualne.mzcr.cz/covid-19'} COVID-19
+      %a{href: '/lite/https/onemocneni-aktualne.mzcr.cz/covid-19'} COVID-19
 
 %form{action: '/', method: 'post'}
   %input{name: 'url', placeholder: 'vlastní URL...'}
-  %button{type: 'submit', name: 'level', value: 'simple'}
-    Rozesrat Simple(TM)
+  %button{type: 'submit', name: 'level', value: 'lite'}
+    Rozesrat Lite(TM)
   %button{type: 'submit', name: 'level', value: 'advanced'}
     Rozesrat Advanced(TM)
 
