--- a/views/index.haml
+++ b/views/index.haml
@@ -19,7 +19,7 @@
     %li
       %a{href: '/advanced/https/www.parlamentnilisty.cz'} Parlamentní Listy
     %li
-      %a{href: '/advanced/https/www.sport.cz'} Sport.cz
+      %a{href: '/lite/https/www.sport.cz'} Sport.cz
     %li
       %a{href: '/lite/https/www.pocasi.cz'} Počasí.cz
     %li
