--- a/views/index.haml
+++ b/views/index.haml
@@ -11,6 +11,8 @@
     %li
       %a{href: '/advanced/https/www.idnes.cz'} iDNES.cz
     %li
+      %a{href: '/sick/https/www.blisty.cz'} Britské Listy
+    %li
       %a{href: '/advanced/https/www.irozhlas.cz'} iRozhlas.cz
     %li
       %a{href: '/advanced/https/www.aktualne.cz'} Aktuálně.cz
